# serving

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  OWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  Third_Party_Open_Source_Software_Notice  backend.py  build.sh  post_sampling_model.py  requirements_test.txt  setup.cfg  setup.py  start.py  start_agent.py  statistics.py  test.sh  test_agent.py  test_continuous_batch.sh
mindspore_serving/: CMakeLists.txt  __init__.py  log.py
mindspore_serving/agent/: agent_multi_post_method.py
mindspore_serving/ccsrc/common/: buffer_tensor.cc  buffer_tensor.h  exit_handle.cc  exit_handle.h  file_system_operation.cc  file_system_operation.h  float16.h  grpc_async_server.cc  grpc_async_server.h  grpc_client.cc  grpc_client.h  grpc_server.cc  grpc_server.h  heart_beat.cc  heart_beat.h  instance.h  instance_data.h  log.cc  log.h  proto_tensor.cc  proto_tensor.h  servable.cc  servable.h  serving_common.h  shared_memory.cc  shared_memory.h  ssl_config.h  status.h  tensor.cc  tensor.h  tensor_base.cc  tensor_base.h  thread_pool.cc  thread_pool.h  utils.cc  utils.h
mindspore_serving/ccsrc/master/: dispacther.cc  dispacther.h  master_context.cc  master_context.h  model_thread.cc  model_thread.h  servable_endpoint.cc  servable_endpoint.h  server.cc  server.h  worker_context.cc  worker_context.h
mindspore_serving/ccsrc/master/grpc/: grpc_client.cc  grpc_client.h  grpc_process.cc  grpc_process.h  grpc_server.cc  grpc_server.h  grpc_server_async.cc  grpc_server_async.h  master_server.h
mindspore_serving/ccsrc/master/notify_worker/: base_notify.h  grpc_notfiy.cc  grpc_notify.cc  grpc_notify.h  local_notify.cc  local_notify.h
mindspore_serving/ccsrc/master/restful/: http_handle.cc  http_handle.h  http_process.cc  http_process.h  restful_request.cc  restful_request.h  restful_server.cc  restful_server.h
mindspore_serving/ccsrc/python/: serving_py.cc  tensor_py.cc  tensor_py.h
mindspore_serving/ccsrc/python/agent/: agent_py.cc  agent_py.h
mindspore_serving/ccsrc/python/master/: master_py.cc  master_py.h
mindspore_serving/ccsrc/python/worker/: pipeline_py.cc  pipeline_py.h  postprocess_py.cc  postprocess_py.h  preprocess_py.cc  preprocess_py.h  servable_py.cc  servable_py.h  worker_py.cc  worker_py.h
mindspore_serving/ccsrc/worker/: context.cc  context.h  model.cc  model.h  model_loader_base.cc  model_loader_base.h  pipeline.cc  pipeline.h  postprocess.cc  postprocess.h  predict_thread.cc  predict_thread.h  preprocess.cc  preprocess.h  servable_register.cc  servable_register.h  sevable_base.h  stage_function.cc  stage_function.h  task_queue.cc  task_queue.h  work_executor.cc  work_executor.h  worker.cc  worker.h  worker_execute.cc  worker_execute.h
mindspore_serving/ccsrc/worker/ascend_servable/: ascend_sevable.cc  ascend_sevable.h
mindspore_serving/ccsrc/worker/distributed_worker/: agent_executor.cc  agent_executor.h  agent_startup.cc  agent_startup.h  common.h  distributed_model_loader.cc  distributed_model_loader.h  distributed_servable.cc  distributed_servable.h  worker_agent.cc  worker_agent.h
mindspore_serving/ccsrc/worker/extra_worker/: remote_call_model.cc  remote_call_model.h
mindspore_serving/ccsrc/worker/grpc/: worker_process.h  (+3 more)
mindspore_serving/client/: __init__.py  client_api.py  client_utils.py
mindspore_serving/client/cpp/: client.cc  client.h
mindspore_serving/client/python/: client.py
mindspore_serving/common/: check_type.py
mindspore_serving/config/: __init__.py  config.py
mindspore_serving/example/add/: client.py  master_with_worker.py
mindspore_serving/example/lenet/: client.py  master.py  master_with_worker.py  worker.py
mindspore_serving/example/python_client/: ms_client.py
mindspore_serving/example/resnet/: master_with_worker.py
mindspore_serving/lib/: entry.py  utils.py
mindspore_serving/master/: __init__.py  _master.py  context.py  master.py  request_resister_engine.py  utils.py
mindspore_serving/models/: __init__.py  base_inputs.py  build_inputs.py  build_tokenizer.py
mindspore_serving/models/model_inputs/: __init__.py  internlm_inputs.py  llama_inputs.py  wizardcoder_inputs.py
mindspore_serving/models/post_sampling/: topk.py
mindspore_serving/models/tokenizer/: __init__.py  baichuan2_tokenizer.py  internlm_tokenizer.py  llama_tokenizer.py
mindspore_serving/proto/: ms_agent.proto  ms_distributed.proto  ms_master.proto  ms_service.proto  ms_worker.proto
mindspore_serving/schedule/: schedule.py
mindspore_serving/server/: __init__.py  _servable_common.py  _servable_local.py  _server.py  llm_server_post.py  start_extra_worker.py  start_worker.py
mindspore_serving/server/common/: __init__.py  check_type.py  decorator.py  utils.py
mindspore_serving/server/distributed/: __init__.py  _distributed.py  _servable_distributed.py  start_distributed_worker.py
mindspore_serving/server/master/: __init__.py  _master.py  context.py
mindspore_serving/server/register/: __init__.py  method.py  model.py  pipeline.py  postprocess.py  preprocess.py  servable.py  stage_function.py  utils.py
mindspore_serving/server/worker/: __init__.py  _worker.py  check_version.py  init_mindspore.py  task.py
mindspore_serving/serving_utils/: __init__.py  constant.py  entry.py  err_code.py  register.py
mindspore_serving/sub_process/: __init__.py
mindspore_serving/worker/: __init__.py  _check_version.py  _worker.py  check_type.py  common.py  context.py  init_mindspore.py  model_init_multimodel.py  task.py  worker.py
mindspore_serving/worker/distributed/: __init__.py  _distributed.py  agent_startup.py  distributed_worker.py  register.py  worker_agent.py
mindspore_serving/worker/register/: __init__.py  _register.py  method.py  postprocess.py  preprocess.py  servable.py
tests/ut/: CMakeLists.txt  runtest.sh
tests/ut/coverage/: cov_config  run_coverage.sh
tests/ut/cpp/: CMakeLists.txt  runtest.sh
tests/ut/python/: CMakeLists.txt  runtest.sh  test_worker_start_servable.py
tests/ut/stub/: graph_impl_stub.cc  graph_impl_stub.h  stub_inference.cc  stub_postprocess.cc  stub_preprocess.cc
(+397 files in other folders)
